--- a/CM20314/appsettings.json
+++ b/CM20314/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=Data/CM_DB.db"
+  },
+  "ApiSettings": {
+    "ApiKey": "secret-key-goes-here"
+  }
 }
