Added raw data (external paths, containers and 1W internal floor 2) #6

--- a/CM20314/CM20314.csproj
+++ b/CM20314/CM20314.csproj
@@ -9,6 +9,17 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Data\Containers\**" />
+    <Compile Remove="Data\Paths\**" />
+    <Content Remove="Data\Containers\**" />
+    <Content Remove="Data\Paths\**" />
+    <EmbeddedResource Remove="Data\Containers\**" />
+    <EmbeddedResource Remove="Data\Paths\**" />
+    <None Remove="Data\Containers\**" />
+    <None Remove="Data\Paths\**" />
+  </ItemGroup>
   <ItemGroup>
     <None Remove="README.md" />
   </ItemGroup>
