--- a/CM20314/CM20314.csproj
+++ b/CM20314/CM20314.csproj
@@ -34,4 +34,14 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Data\CM_DB.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\Raw\**\*">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    
+  </ItemGroup>
+
 </Project>
