--- a/CM20314/CM20314.csproj
+++ b/CM20314/CM20314.csproj
@@ -35,13 +35,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Data\CM_DB.db">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Update="Data\Raw\**\*">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Data\CM_DB.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
