--- a/CM20314/CM20314.csproj
+++ b/CM20314/CM20314.csproj
@@ -32,6 +32,8 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.25" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="KdTree" Version="1.4.1" />
+    <PackageReference Include="Accord.MachineLearning" Version="3.8.0" />
   </ItemGroup>
 
   <ItemGroup>
