--- a/CM20314/CM20314.csproj
+++ b/CM20314/CM20314.csproj
@@ -45,7 +45,7 @@
 
   <ItemGroup>
     <None Update="Data\CM_DB.db">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
